# Mailify

./: .env  .gitignore  README.MD  README.md  docker-compose.yml  index.html  package-lock.json  package.json
backend/: app.py
mailify-api/app/: routes.py  services.py
mailify-back/: Dockerfile  app.py  config.py  requirements.txt
mailify-back/app/: __init__.py  routes.py  services.py
mailify-back/app/routes/: __init__.py  email_routes.py
mailify-back/app/services/: email_generator.py
mailify-back/src/: app.py  email_generator.py  main.py  test.ipynb
mailify-backend/: Cargo.toml  Dockerfile
mailify-backend/src/: db.rs  main.rs  model.rs  models.rs
mailify-backend/src/models/: auth_request.rs  auth_response.rs  mod.rs  user.rs
mailify-backend/src/routes/: auth.rs  email.rs
mailify-backend/src/utils/: db.rs
mailify-front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
mailify-front/src/: App.svelte
mailify-front/src/components/: Footer.svelte  Navbar.svelte
mailify-front/src/routes/: EmailGenerator.svelte  EmailResult.svelte  Home.svelte  Mailing.svelte
sentiment-back/: app.py
sentiment-front/: package-lock.json  package.json
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Footer.svelte
src/components/background/: MailingBackground.svelte
src/components/email-generator/: CategoryDescription.svelte  (+2 more)
src/routes/: EmailGenerator.svelte  EmailResult.svelte  Home.svelte  __layout.svelte  index.svelte
src/sentiment-model/: requirements.txt
(+49 files in other folders)
