[package]
name = "mailify-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
tower-http = { version = "0.4", features = ["cors"] }
